--- a/index.html
+++ b/index.html
@@ -539,7 +539,7 @@
                 <div class="col-lg-4 col-md-6 portfolio-item puntarenas wow fadeInUp" data-wow-delay="0.1s">
                     <div class="rounded overflow-hidden">
                         <div class="position-relative overflow-hidden">
-                            <img class="img-fluid w-100" src="img/golfi.png" alt="">
+                            <img class="img-fluid w-100" src="img/barranca.png" alt="">
                             <div class="portfolio-overlay">
                                 <a class="btn btn-square btn-outline-light mx-1" href="img/barranca.png" data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
                                 <a class="btn btn-square btn-outline-light mx-1" href="https://www.facebook.com/Ibbbarranca/" target="_blank"><i class="fa fa-link"></i></a>
